update swagger and testing
